# rust

./: README.md
src/oreilly/programming-rust-2nd-edition/02-simple-web-server/: Cargo.toml  test-multiple-calls.bash
src/oreilly/programming-rust-2nd-edition/03-mandelbrot/: Cargo.toml
src/oreilly/programming-rust-2nd-edition/04-quick-replace/: Copy.toml
src/udemy-curso-completo-rust/01-grep-mini/: Cargo.toml  README.md  file.txt
src/udemy-curso-completo-rust/01-grep-mini/src/: configuration.rs  file.rs  lib.rs  main.rs  search.rs
src/udemy-curso-completo-rust/02-chat-server/: Cargo.toml
src/udemy-curso-completo-rust/02-chat-server/src/: main.rs
src/udemy-curso-completo-rust/03-web-server/: 404.html  index.html
src/udemy-curso-completo-rust/03-web-server/src/: main.rs
src/udemy-curso-completo-rust/04-twitter-clone/: .env  Cargo.toml
src/udemy-curso-completo-rust/04-twitter-clone/migrations/2023-05-29-113753_create_tweets/: down.sql  up.sql
src/udemy-curso-completo-rust/04-twitter-clone/migrations/2023-05-29-114127_create_likes/: down.sql  up.sql
src/udemy-curso-completo-rust/04-twitter-clone/src/: likes.rs  main.rs  schema.rs  tweets.rs
src/udemy-curso-completo-rust/05-web-assembly/: Cargo.toml
src/udemy-curso-completo-rust/05-web-assembly/src/: lib.rs
src/udemy-curso-completo-rust/05-web-assembly/webapp/: index.html
src/udemy-curso-completo-rust/06-webapp/: Cargo.toml  index.html
src/udemy-curso-completo-rust/06-webapp/src/: env.rs  main.rs  youtube.rs
src/udemy-curso-completo-rust/07-sqlite-app/: Cargo.toml  user.sqlite
(+5 files in other folders)
