[package]
name = "twitter-clone"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
diesel = { version = "2.1.0", features = ["postgres", "r2d2", "uuid", "chrono"] }
dotenv = "0.15.0"
uuid = { version = "1.3.3", features = ["v4", "serde"] }
chrono = { version = "0.4.25", features = ["serde"] }
serde = "1.0.163"
serde_derive = "1.0.163"
serde_json = "1.0.96"
