[package]
name = "web_assembly"
version = "0.1.0"
edition = "2021"

# Execute in linux:
# wasm-pack build --target web

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.86"
wasm-bindgen-futures = "0.4.36"
serde = {version = "1.0.163", features = ["derive"]}
serde_json = "1.0.96"

[dependencies.web-sys]
version = "0.3.63"
features = [
    'Headers',
    'Request',
    'RequestInit',
    'RequestMode',
    'Response',
    'Window',
]
